change in pom xml file and remove plugins for maven compilers